--- a/templates/home.html
+++ b/templates/home.html
@@ -296,11 +296,11 @@
                                 <span>Flask, Python, JavaScript, CSS3</span>
                             </div>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item" onclick="window.open('https://github.com/pkunakachiri2001/DISCRETEmathsSETS', '_blank')">
                             <i class="fas fa-github"></i>
                             <div>
                                 <strong>Repository</strong>
-                                <span>Open Source Educational Tool</span>
+                                <span>https://github.com/pkunakachiri2001/DISCRETEmathsSETS</span>
                             </div>
                         </div>
                         <div class="info-item">
