--- a/templates/home.html
+++ b/templates/home.html
@@ -307,7 +307,7 @@
                             <i class="fas fa-calendar"></i>
                             <div>
                                 <strong>Version</strong>
-                                <span>2025 Enhanced Edition</span>
+                                <span>2025 VU AIML CLASS</span>
                             </div>
                         </div>
                     </div>
