Correct team member name from 'Noorway' to 'Nooryen'

--- a/templates/home.html
+++ b/templates/home.html
@@ -133,7 +133,7 @@
                             <span class="role-badge collaborative">Development Team</span>
                             <div class="team-members">
                                 <span>TANVI PATIL</span>
-                                <span>NOORWAY FARAS</span>
+                                <span> NOORYEN FARAS</span>
                                 <span>CHRISTIAN R MUTIWADIRWA</span>
                                 <span>PANASHE KUNAKA</span>
                             </div>
@@ -253,7 +253,7 @@
                             <div class="team-member">
                                 <i class="fas fa-user-graduate"></i>
                                 <div>
-                                    <strong>Noorway Faras</strong>
+                                    <strong>Nooryen Faras</strong>
                                     <span>Backend Logic</span>
                                 </div>
                             </div>
