Fix spelling of 'Noorway' to 'Nooryen' in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -489,7 +489,7 @@
                     <div class="team-compact">
                         <div class="team-names">
                             <span>Tanvi Patil</span>
-                            <span>Noorway Faras</span>
+                            <span>Nooryen Faras</span>
                             <span>Christian R Mutiwadirwa</span>
                             <span>Panashe Kunaka</span>
                         </div>
